--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   animated_splash_screen: ^1.1.0
 
   #Google Sign In
-  firebase_auth: ^1.1.4
+  firebase_auth: ^3.3.5
   google_sign_in: ^5.0.3
 
   #Google Icon
@@ -41,7 +41,15 @@ dependencies:
   email_validator: ^2.0.1
 
   #state Management
-  provider: ^5.0.0
+  provider: ^6.0.2
+
+  flutter_screenutil: ^5.0.3
+
+  firebase_core: ^1.11.0
+  cloud_firestore: ^3.1.6
+  firebase_storage: ^10.2.5
+
+  google_fonts: ^2.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
